hphp/test/zend/good/zend/class_alias_008.php.exp
HipHop Fatal error: Undefined function: class_alias in hphp/test/zend/good/zend/class_alias_008.php on line 5
